crates/vize_atelier_jsx/tests/snapshots/compile__default_config_routes_undirected_component_to_vdom.snap
---
source: crates/vize_atelier_jsx/tests/compile.rs
expression: component_matrix(&out)
---
## component 0
name: Some("App")
mode: Vdom
variant: vdom
code:
export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div"))
}
