crates/vize_atelier_jsx/tests/snapshots/compile__invalid_directive_produces_a_diagnostic.snap
---
source: crates/vize_atelier_jsx/tests/compile.rs
expression: out.diagnostics
---
[
    JsxDiagnostic {
        severity: Error,
        message: "unknown JSX mode directive \"use vue:vapour\": expected \"use vue:vdom\" or \"use vue:vapor\"",
        start: 20,
        end: 36,
    },
]
