crates/vize_atelier_jsx/tests/snapshots/compile__one_module_can_mix_vdom_and_vapor_components.snap
---
source: crates/vize_atelier_jsx/tests/compile.rs
expression: component_matrix(&out)
---
## component 0
name: Some("A")
mode: Vapor
variant: vapor
code:
import { template as _template } from 'vue';
const t0 = _template("<a></a>", true)

export function render(_ctx) {
  const n0 = t0()
  return n0
}


## component 1
name: Some("B")
mode: Vdom
variant: dom
code:
export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("b"))
}
