crates/vize_atelier_jsx/tests/snapshots/compile__vapor_default_with_vdom_directive_override_in_one_module.snap
---
source: crates/vize_atelier_jsx/tests/compile.rs
expression: component_matrix(&out)
---
## component 0
name: Some("Default")
mode: Vapor
variant: vapor
code:
import { template as _template } from 'vue';
const t0 = _template("<a></a>", true)

export function render(_ctx) {
  const n0 = t0()
  return n0
}


## component 1
name: Some("Overridden")
mode: Vdom
variant: dom
code:
export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("b"))
}
